--- a/site.yml
+++ b/site.yml
@@ -11,6 +11,10 @@ content:
     branches: []
     tags: v*
     start_path: docs
+  - url: https://github.com/lordofthejars/diferencia-java.git
+    branches: []
+    tags: v*
+    start_path: docs
 ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
